--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,5 +17,16 @@
         <item name="android:minHeight">22dip</item>
         <item name="android:maxHeight">22dip</item>
     </style>
+    <style name="Theme.Custom" parent="android:Theme">
+        <item name="android:calendarViewStyle">@style/Widget.CalendarView.Custom</item>
+    </style>
+
+    <style name="Widget.CalendarView.Custom" parent="android:Widget.CalendarView">
+        <item name="android:focusedMonthDateColor">@color/DarkRed</item>
+        <item name="android:weekNumberColor">@color/BackGround</item>
+        <item name="android:weekDayTextAppearance">@style/Standard_Font</item>
+        <item name="android:dateTextAppearance">@style/Standard_Font</item>
+        <item name="android:background">@color/Licorice</item>
+    </style>
 
 </resources>
